##Text encoding: utf-8

2006-09-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* POTFILES.in: update files list.

2006-06-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* POTFILES.in: update files list.

2006-05-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* POTFILES.in: add gcu/crystalview.cc.

2006-02-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* POTFILES.in: imported Gnome Crystal stuff
	* de.po: ditto.
	* es.po: ditto.
	* fr.po: ditto.
	* it.po: ditto.
	* pl.po: ditto.
	* ru.po: ditto.

2006-01-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* POTFILES.in: add one more missing file.
	* fr.po: update french translation.

2006-01-29  Jean Bréfort  <jean.brefort@normalesup.org>
	* po/POTFILES.in: add missing files.
	* po/fr.po: update french translation.

2006-01-15 Jean Bréfort	<jean.brefort@normalesup.org>
	* Update french translation.

2006-01-13 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* Updated German translation.

2005-11-21 Valek Filippov
	* New Russian translation.

2005-11-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* po/POTFILES.in: add new files.
	* po/fr.po: update french translation.

2005-10-03 Jean Bréfort	<jean.brefort@normalesup.org>
	* Update POTFILES.in.

2005-09-22 Jean Bréfort	<jean.brefort@normalesup.org>
	* Update POTFILES.in.

2005-09-07 Jean Bréfort	<jean.brefort@normalesup.org>
	* Update POTFILES.in.

2005-05-27 Jean Bréfort	<jean.brefort@normalesup.org>
	* Update french translation.

2005-03-16 Jean Bréfort	<jean.brefort@normalesup.org>
	* Merge roentgenium translation from 0-2 branch to de, it and pl.

2005-01-21 Costantino
	* Updated Italian translation.

2002-07-20	Jean Bréfort	<jean.brefort@normalesup.org>
	* Updated French Translation