@@ -1,27 +1,34 @@
 [encoding: UTF-8]
 glade/gchemcalc.glade
 glade/gtkperiodic.glade
+glade/image-size.glade
+glade/image-resolution.glade
 glade/crystal/cell.glade
 glade/crystal/prefs.glade
 glade/crystal/view-settings.glade
 glade/crystal/atoms.glade
-glade/crystal/cell.glade
 glade/crystal/cleavages.glade
 glade/crystal/lines.glade
 glade/crystal/size.glade
 glade/table/eltpage.glade
 glade/table/state-thermometer.glade
+glade/table/curve.glade
+glade/table/family.glade
 database/elements.xml.in
 database/elecprops.xml.in
 database/isotopes.xml.in
 database/radii.xml.in
+gcu/application.cc
 gcu/crystaldoc.cc
+gcu/crystalview.cc
 gcu/dialog.cc
 gcu/element.cc
+gcu/filechooser.cc
 gcu/formula.cc
-gcu/crystalview.cc
+gcu/glview.cc
 gcu/gtkchem3dviewer.cc
 gcu/gtkcomboperiodic.c
+gcu/gtkperiodic.c
 programs/3d/application.cc
 programs/3d/main.cc
 programs/3d/window.cc
@@ -30,12 +37,14 @@ programs/calc/gchemcalc.cc
 programs/calc/gchemcalc-unstable.desktop.in
 programs/crystal/gcrystal-unstable.desktop.in
 programs/crystal/gcrystal.schemas.in
-programs/crystal/main.cc
-programs/crystal/document.cc
 programs/crystal/application.cc
 programs/crystal/atomsdlg.cc
-programs/crystal/linesdlg.cc
+programs/crystal/celldlg.cc
 programs/crystal/cleavagesdlg.cc
+programs/crystal/document.cc
+programs/crystal/linesdlg.cc
+programs/crystal/main.cc
+programs/crystal/window.cc
 programs/table/gchemtable-app.cc
 programs/table/gchemtable-elt.cc
 programs/table/gchemtable-curve.cc
