@@ -1,5 +1,8 @@
 ##Text encoding: utf-8
 
+2007-02-16  Jean Bréfort  <jean.brefort@normalesup.org>
+	* POTFILES.in: update files list.
+
 2006-09-10  Jean Bréfort  <jean.brefort@normalesup.org>
 	* POTFILES.in: update files list.
 
